tests/machine/x/kotlin/string_prefix_slice.error
line 64:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/string_prefix_slice.kt:64:13: error: operator '==' cannot be applied to 'Char' and 'String'
    println(s1[0] == prefix)
            ^
/workspace/mochi/tests/machine/x/kotlin/string_prefix_slice.kt:66:13: error: operator '==' cannot be applied to 'Char' and 'String'
    println(s2[0] == prefix)
            ^

 63:     val s1 = "forest"
 64:     println(s1[0] == prefix)
 65:     val s2 = "desert"
